# SimplECS

./: CMakeLists.txt  ex.h  main.cpp
container/: chunk_container.h  extend_pool.h  icontainer.h  ipool_object.h  pool.h  pool_object.h
ecs/: API.cpp  API.h  component_manager.cpp  component_manager.h  engine.cpp  engine.h  entity_manager.cpp  entity_manager.h  simple_ecs.h  system_manager.cpp  system_manager.h
ecs_core/: API.h  Engine.cpp  Engine.h  component_manager.cpp  component_manager.h  entity_manager.cpp  entity_manager.h  system_manager.cpp  system_manager.h
ecs_engine_data/: component.h  ecs_typedef.h  entity.h  icomponent.h  ientity.h  isystem.h  system.h
event/: Delegate.h  EventHandler.cpp  EventHandler.h  delegate.h  dispatcher.cpp  dispatcher.h  event.h  event_handler.cpp  event_handler.h  ievent.h  ievent_listener.cpp  ievent_listener.h
memory/: extend_allocator.h  extend_memory.h  global_allocator.cpp  global_allocator.h  iallocator.h  linear_allocator.cpp  pool_allocator.cpp  pool_allocator.h  stack_allocator.cpp  stack_allocator.h
memory_manager/: iallocator.h  linear_allocator.cpp  linear_allocator.h  pool_allocator.cpp  stack_allocator.cpp  stack_allocator.h
support_class/: container_object.h  hash_container.h  helper_typedef.h  icomponent_of_entity.h  icontainer.h  iterator.cpp  iterator.h
support_class/impl/: component_container.cpp  component_container.h  componets_of_entity.h  entity_container.cpp  entity_container.h
tests/: test_engine.cpp  test_manager.cpp  tests.h  tests_event.cpp  tests_memory.cpp
type/: component.h  ecs_typedef.h  entity.h  icomponent.h  ientity.h  isystem.h  system.h
utils/: hash_container.h  timer.cpp  timer.h  util_counter.h
