cmake_minimum_required(VERSION 3.19)
project(Engine)

set(CMAKE_CXX_STANDARD 14)

add_executable(Engine main.cpp utils/util_counter.h type/ecs_typedef.h type/entity.h type/ientity.h type/icomponent.h type/component.h type/isystem.h type/system.h ecs/entity_manager.cpp ecs/entity_manager.h ecs/component_manager.cpp ecs/component_manager.h ecs/API.h utils/hash_container.h memory/iallocator.h memory/stack_allocator.cpp memory/stack_allocator.h memory/linear_allocator.cpp memory/linear_allocator.h memory/pool_allocator.h container/pool.h memory/pool_allocator.cpp ecs/system_manager.cpp ecs/system_manager.h event/ievent.h event/event.h event/event_handler.cpp event/event_handler.h event/delegate.h event/ievent_listener.h event/dispatcher.cpp event/dispatcher.h ecs/engine.cpp ecs/engine.h utils/timer.cpp utils/timer.h memory/extend_allocator.h memory/global_allocator.h memory/global_allocator.cpp tests/tests_memory.cpp tests/tests.h tests/tests_event.cpp tests/test_manager.cpp container/extend_pool.h ecs/API.cpp event/ievent_listener.cpp tests/test_engine.cpp)